--- a/nuevoarchivo.html
+++ b/nuevoarchivo.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Encabezado Documento</h1>
     
+    <h2>"Se me solucinó :)"</h2>
 </body>
 </html>
