--- a/nuevoarchivo.html
+++ b/nuevoarchivo.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+
+  <body>
     <h1>Encabezado Documento</h1>
-    
+
     <h2>"Se me solucinó :)"</h2>
-</body>
+    <header></header>
+    <nav>
+      <header></header>
+    </nav>
+    <main>
+      <article>
+        <header></header>
+      </article>
+    </main>
+    <aside>
+      <header></header>
+    </aside>
+    <footer></footer>
+  </body>
 </html>
