cositas nuevas con poca importancia

--- a/texto en linea/texto en linea.html
+++ b/texto en linea/texto en linea.html
@@ -16,6 +16,7 @@
     <BR>PARRAFO 1
     <BR>PARRAFO 1
 
-    <P>Personajes de ninjago <span class="ninja">kai</span><em>zane</em></P>
+    <P>Personajes de ninjago <span class="ninja">kai</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>zane, </em><small> tu pito</small></P>
+
 </body>
-</html>¡
+</html>
