--- a/3.enlaces y listas/listas.html
+++ b/3.enlaces y listas/listas.html
@@ -29,7 +29,50 @@
         <dd>red de redes</dd>
         <dt>web</dt>
         <dd>doc html enlazados</dd>
+    </dl> <dl> <dl> <dl> <dl> <dl> <dl></dl>
+        <dt>red</dt>
+        <dd>red de redes</dd>
+        <dt>web</dt>
+        <dd>doc html enlazados</dd>
+    </dl></dl>
+        <dt>red</dt>
+        <dd>red de redes</dd>
+        <dt>web</dt>
+        <dd>doc html enlazados</dd>
+    </dl></dl>
+        <dt>red</dt>
+        <dd>red de redes</dd>
+        <dt>web</dt>
+        <dd>doc html enlazados</dd>
+    </dl></dl>
+        <dt>red</dt>
+        <dd>red de redes</dd>
+        <dt>web</dt>
+        <dd>doc html enlazados</dd>
+    </dl></dl>
+        <dt>red</dt>
+        <dd>red de redes</dd>
+        <dt>web</dt>,
+        <dd>doc html enlazados</dd>
+    </dl></dl>
+        <dt>red</dt>
+        <dd>red de redes</dd>
+        <dt>web</dt>
+        <dd id="ultimo">doc html enlazados</dd>
     </dl>
-    
+    <h2><p>lsitas anidadas</p>
+        <ol>
+            <ul>
+            <li><ol><li>yassin</li>
+                    <li>homo<ul><li>fumon</li>
+                    <li>forma base</li></ul>
+                    <li>isma</li></ol></li>
+            <li><ol><li>denis</li>
+                <li>mario</li>
+                <li><a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.cnn.com%2F2013%2F04%2F26%2Fworld%2Famericas%2Fnicolas-maduro-fast-facts%2Findex.html&psig=AOvVaw1J58BgxPsGBZn2o8s3iqcd&ust=1728493230719000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCJDqkpqh_4gDFQAAAAAdAAAAABAE">manu</a></li>
+                <li><a href="https://play-lh.googleusercontent.com/nUzK8WjxbT-X59mlDYyPej6HO_j45Ou7qOIIgnJbTO6IzNA6iAU_kMdA38hHGONBv9c=w240-h480-rw">marco</a></li></ol></li>
+            </ul>
+        
+        </ol>
   </body>
 </html>  
