--- a/3.enlaces y listas/enlacess.html
+++ b/3.enlaces y listas/enlacess.html
@@ -8,9 +8,10 @@
 <body>
     <h1>ejercicios de enlaces</h1>
     <h2>enlaces externos</h2>
-    <p><a href="./listas.html"> listas ordenadas</a></p>
-    <p>listas no ordenada</p>
-    <p></p>
+    <p><a href="./listas.html" target="_blank"> listas ordenadas</a></p>
+    <p><a href="listas.html#ultimo">anidadas
+    </p>
+    <p><a href="#">arriba</a></p>
     <h2>enlces internos</h2>
 </body>
 </html>
