--- a/4.imagenes/imagenesycontenido.html
+++ b/4.imagenes/imagenesycontenido.html
@@ -12,7 +12,6 @@
     <h2>img int</h2>
     <img src="./img/Shiro-Red-Man-Smile-Deadman-Wonderland-1024x576.webp" alt="">
     <h2>contenido embebido</h2>
-    <iframe src="https://www.youtube.com/live/ELuRdluS_mI?feature=shared">
-    </iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/icK5DN0MLPc?si=d8nFNOW1hA21OHhc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
