--- a/nuevoarchivo.html
+++ b/nuevoarchivo.html
@@ -5,23 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-
+  
   <body>
-    <h1>Encabezado Documento</h1>
-
-    <h2>"Se me solucinó :)"</h2>
-    <header></header>
-    <nav>
-      <header></header>
-    </nav>
-    <main>
-      <article>
-        <header></header>
-      </article>
-    </main>
-    <aside>
-      <header></header>
-    </aside>
-    <footer></footer>
-  </body>
+    <ol>
+      <li>españa</li>
+      <li>francia
+      </li>
+      <li>portugar</li></ol>
+      <ol>
+        <li>españa</li>
+        <li>francia
+        </li>
+        <li>portugar</li></ol>
+        <ol>
+          <li>españa</li>
+          <li>francia
+          </li>
+          <li>portugar</li></ol>
+          <input ty--olor">elige color<input>
+  <h2>definicion</h2>
+ </body>
 </html>
